Fix accessibility on firefox

--- a/src/app/routes/cards/accessibility/accessibility.component.scss
+++ b/src/app/routes/cards/accessibility/accessibility.component.scss
@@ -32,6 +32,7 @@
     &-range {
       width: 100%;
       max-width: 400px;
+      height: 5px;
       margin: 30px 0 15px 0;
   
       -webkit-appearance: none;
@@ -39,6 +40,10 @@
   
       &:focus {
         outline: none;
+      }
+
+      &::-moz-focus-outer {
+        border: 0;
       }
   
       // CIRCLE THUMB
@@ -51,39 +56,21 @@
         border-radius: 50%;
         background: #ffffff;
         cursor: pointer;
-        margin-top: -10px; 
+        margin-top: -10px;
         box-shadow: 0 0 15px .5px white;
       }
   
       &::-moz-range-thumb {
+        -moz-appearance: none;
         border: 1px solid white;
         height: 25px;
         width: 25px;
         border-radius: 50%;
         background: #ffffff;
         cursor: pointer;
+        margin-top: -10px;
         box-shadow: 0 0 15px 5px white;
       }
-  
-      &::-ms-thumb {
-        border: 1px solid white;
-        height: 25px;
-        width: 25px;
-        border-radius: 50%;
-        background: #ffffff;
-        cursor: pointer;
-        box-shadow: 0 0 15px 5px white;
-      }
-  
-      &::-ms-track {
-        width: 100%;
-        cursor: pointer;
-      
-        background: transparent; 
-        border-color: transparent;
-        color: transparent;
-      }
-  
       // TRACK LINE
   
       &::-webkit-slider-runnable-track {
@@ -91,46 +78,16 @@
         height: 5px;
         cursor: pointer;
         background-image: linear-gradient(to right, #be1e2d, #f7941d, #ffde17, #00a651);
-        border-radius: 1.25px;
+        border-radius: 1.5px;
         border: 0.1px solid #010101;
       }
   
       &::-moz-range-track {
         width: 100%;
-        height: 8.4px;
+        height: 5px;
         cursor: pointer;
-        box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
-        background-image: linear-gradient(to right, black, white);
-        border-radius: 1.25px;
-        border: 0.1px solid #010101;
-      }
-      
-      &::-ms-track {
-        width: 100%;
-        height: 8.4px;
-        cursor: pointer;
-        background: transparent;
-        border-color: transparent;
-        border-width: 16px 0;
-        color: transparent;
-      }
-      &::-ms-fill-lower {
-        background-image: linear-gradient(to right, black, white);
-        border: 0.1px solid #010101;
-        border-radius: 2.5px;
-        box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
-      }
-      &:focus::-ms-fill-lower {
-        background-image: linear-gradient(to right, black, white);
-      }
-      &::-ms-fill-upper {
-        background-image: linear-gradient(to right, black, white);
-        border: 0.1px solid #010101;
-        border-radius: 2.5px;
-        box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
-      }
-      &:focus::-ms-fill-upper {
-        background-image: linear-gradient(to right, black, white);
+        background-image: linear-gradient(to right, #be1e2d, #f7941d, #ffde17, #00a651);
+        border-radius: 1.5px;
       }
     }
 
@@ -153,10 +110,18 @@
         &::-webkit-slider-thumb {
           background-color: #be1e2d;
         }
+
+        &::-moz-range-thumb {
+          background-color: #be1e2d;
+        }
       }
   
       &.stage-2 {
         &::-webkit-slider-thumb {
+          background-color: #f7941d;
+        }
+
+        &::-moz-range-thumb {
           background-color: #f7941d;
         }
       }
@@ -165,16 +130,28 @@
         &::-webkit-slider-thumb {
           background-color: #ffde17;
         }
+
+        &::-moz-range-thumb {
+          background-color: #ffde17;
+        }
       }
   
       &.stage-4 {
         &::-webkit-slider-thumb {
           background-color: #ffde17;
         }
+
+        &::-moz-range-thumb {
+          background-color: #ffde17;
+        }
       }
   
       &.stage-5 {
         &::-webkit-slider-thumb {
+          background-color: #00a651;
+        }
+
+        &::-moz-range-thumb {
           background-color: #00a651;
         }
       }
